--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,13 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <h1>Blog de Post</h1>
-        <p>Parrafo inicial</p>
+        <div id="container">
+
+            <div id="post">
+                <h1>Titulo de este post </h1>
+                <p>Parrafo de inicio del post</p>
+            </div>
+            
+        </div>
     </body>
 </html>
