--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,9 @@
     </head>
     <body>
         <div id="container">
-
+            <div id="cabecera">
+                cabecera
+            </div>
             <div id="post">
                 <h1>Titulo de este post </h1>
                 <p>Parrafo de inicio del post</p>
