agregado contenido adicional del blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,15 @@
 
             <div id="post">
                 <h1>Titulo de este post </h1>
-                <p>Parrafo de inicio del post</p>
+                <p>Parrafo de inicio del post
+                    donde vamos a ingresar la itroduccion
+                    de diferentes temas a desarrollar.
+                </p>
+                <p>
+                    Acá irá otro parrafo en donde desarrollaremos
+                    centralmente cada uno de los temas de interés
+                    que vendrán al blog.
+                </p>
             </div>
             
         </div>
