--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog 
-                <span id="tagline">Tu blog de confianza</span>
+                <span id="tagline">Tu blog maestro</span>
             </div>
             <div id="post">
                 <h1>Titulo de este post </h1>
@@ -22,6 +22,7 @@
                     centralmente cada uno de los temas de interés
                     que vendrán al blog.
                 </p>
+                <p>Suscríbete y dale like</p>
             </div>
             
         </div>
